updated font color of links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Coding Temple</a></li>
+                <li><a href="https://codingtemple.disco.co/p/software-engineering---live---pt---june-2025/dashboard" target="_blank">Coding Temple</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#email">Contact Me</a></li>
@@ -19,12 +19,12 @@
     </header>
     
     <main>
-        <img class="profilePic" src="IMG_2176.jpg" alt="">
+        <div><img class="profilePic" src="IMG_2176.jpg" alt=""></div>
         <h1>Thu Vo</h1>
 
         <section id="about">
             <h2>About Me</h2>
-            <p>Hi everyone! My name is Thu Vo and I grew up in a small town in Northern California called Monterey. I moved down to Southern California to attend UCI as a Biomedical Engineer and I loved it here so much, I decided to stay after graduating. I currently work at a cancer diagnostic laboratory and I am looking forward to learning as much as I can throughout this Bootcamp.</p>
+            <p>Hi everyone! My name is Thu Vo and I grew up in a small town in Northern California called Monterey. I moved down to Southern California to attend UCI as a Biomedical Engineer and I loved it here so much, I decided to stay after graduating. I look forward to getting to know everyone in the cohort and learning as much as I can throughout this Bootcamp!</p>
         </section>
     </main>
 
