centered profile picture and name container

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </header>
     
     <main>
-        <div><img class="profilePic" src="IMG_2176.jpg" alt=""></div>
+        <div class="profileContainer">
+            <img class="profilePic" src="IMG_2176.jpg" alt="">
+        </div>
         <h1>Thu Vo</h1>
 
         <section id="about">
